--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
+    <title>Koike's portoforio</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
@@ -13,6 +13,36 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-  </body>
+        <header><!--とはなんぞ？-->
+            <nav><!--これも知らん……-->
+                <ul>
+                    <li><a href="index.html">Home?</a></li><!--ヤバイ。バーン・ノーティスのページにしちゃったｗｗｗｗ-->
+                    <li><a href="about.html" class="selected">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div id="logo">
+                <img src="profile.jpg" alt="">
+                <h1>小池 惇史</h1>
+            </div>
+        </header>    
+        <div class="container">
+            <section>
+                <h2>About</h2>
+                <h3>自己紹介</h3>
+        <p>小池 惇史（会社員）</p>
+        <p>群馬県吾妻郡東吾妻町出身。働く傍らでWebアプリの勉強中</p>
+        <p>Photoshop、Illustrater、AfterEffectsでの作品制作経験あり</p>
+        <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
+        <h3>リンク</h3>
+        <a href="https://www.facebook.com/profile.php?id=100002281030421" target="_blank">
+              <img src="facebook.png" alt="お問い合わせはこちら？"></li>
+            <li><a href="https://www.twitter.com/tarokirameki" target="blank">Twitter</a></li>
+        </ul>
+        </section>
+        <footer>
+            <p>&copy; 2015 Taro Kirameki.</p>
+        </footer>
+        </div>
+    </body>
 </html>
