--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Koike's portfolio</title>
     <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"1
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
@@ -14,6 +14,7 @@
   </head>
   <body>
         <header><!--頭の部分。ドロップダウンあり-->
+        
               <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -37,7 +38,8 @@
         </div>
       </nav>
             <div id="logo">
-                <img src="profile.jpg" alt="">
+              <img src="profile.jpg" class="img-circle" alt="">
+              
                 <h1>小池 惇史</h1>
             </div>
         </header>    
@@ -50,7 +52,7 @@
         <p>Photoshop、Illustrater、AfterEffectsでの作品制作経験あり</p>
         <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
         <h3>SNS</h3>
-        <a href="https://www.facebook.com/profile.php?id=100002281030421" target="_blank">
+        <a href="https://www.facebook.com/profile.php?viewas=100000686899395&privacy_source=timeline_gear_menu" target="_blank">
               <img src="facebook.png" alt="お問い合わせはこちら？" width="50" height="50"></li>
         <a href="https://www.twitter.com/tarokirameki" target="blank">
                 <img src="twitter.png" alt="お問い合わせはこちら？" width="55" height="55"></a></li>
