--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Koike's portfolio</title>
+    <meta name="description" content="オリジナルポートフォリオページ">
+    <link rel="stylesheet" href="about.css">
+    
     <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"1
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
@@ -30,7 +33,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">CG関係</a></li>
               <li><a href="#">映像関係</a></li>
-            　<li><a href="https://github.com/feng2001" target="blank">GitHub</a></li>
+              <li><a href="https://github.com/feng2001" target="blank">GitHub</a></li>
               <li class="active"><a href="#">お問い合わせ</a></li>
 
             </ul>
@@ -53,9 +56,9 @@
         <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
         <h3>SNS</h3>
         <a href="https://www.facebook.com/profile.php?viewas=100000686899395&privacy_source=timeline_gear_menu" target="_blank">
-              <img src="facebook.png" alt="お問い合わせはこちら？" width="50" height="50"></li>
-        <a href="https://www.twitter.com/tarokirameki" target="blank">
-                <img src="twitter.png" alt="お問い合わせはこちら？" width="55" height="55"></a></li>
+              <img src="facebook.png" alt="お問い合わせはこちら？" width="50" height="50"></a>
+        <a href="https://www.twitter.com/tarokirameki" target="_blank">
+                <img src="tporwitter.png" alt="お問い合わせはこちら？" width="55" height="55"></a>
         </section>
         <footer>
             <p>&copy; 2016 Atsushi Koike.</p>
