--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="https://www.facebook.com/profile.php?viewas=100000686899395&privacy_source=timeline_gear_menu" target="_blank">
               <img src="facebook.png" alt="お問い合わせはこちら？" width="50" height="50"></a>
         <a href="https://www.twitter.com/tarokirameki" target="_blank">
-                <img src="tporwitter.png" alt="お問い合わせはこちら？" width="55" height="55"></a>
+                <img src="twitter.png" alt="お問い合わせはこちら？" width="55" height="55"></a>
         </section>
         <footer>
             <p>&copy; 2016 Atsushi Koike.</p>
